• Widened .main-desc to fix home page layout (top part was overflowing below the main image); • Fixed icon issue with rating plugin on building page (not connected to the DB yet, just added UI so far); • Showing listing search field for admins while making recommendations, but not for clients

--- a/client/templates/index/index.styl
+++ b/client/templates/index/index.styl
@@ -63,9 +63,9 @@
   font-size 17.5px
   line-height 1.3
   margin 0 auto
-  max-width 580px
+  max-width 650px
   padding 10px
-  text-shadow 0 2px 30px rgba(0,0,0,0.75), 0 2px 0px rgba(0,0,0,0.5)
+  text-shadow 0 1px 20px rgba(0,0,0,0.6), 0 2px 0px rgba(0,0,0,0.7)
   @media screen and (min-width: 340px)
     font-size 17px
   @media screen and (min-width: 360px)
